[package]
name = "ls-rds"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
aws-config = "1.6.2"
aws-sdk-rds = "1.86.0"
aws-sdk-sts = "1.68.0"
aws-sdk-organizations = "1.75.0"
tokio = { version = "1.45.0", features = ["full"] }
aws-types = "1.3.7"
